WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289240
Address UncountedLocalVarsChecker warning in DocumentFullscreen.cpp
https://bugs.webkit.org/show_bug.cgi?id=289240
Summary
Address UncountedLocalVarsChecker warning in DocumentFullscreen.cpp
Tim Nguyen (:ntim)
Reported
2025-03-06 06:02:10 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-06 06:02:59 PST
<
rdar://problem/146384866
>
Tim Nguyen (:ntim)
Comment 2
2025-03-06 06:05:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41995
EWS
Comment 3
2025-03-06 08:17:32 PST
Committed
291701@main
(ad65a9078cb1): <
https://commits.webkit.org/291701@main
> Reviewed commits have been landed. Closing PR #41995 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug