Address UncountedLocalVarsChecker warning in DocumentFullscreen.cpp https://bugs.webkit.org/show_bug.cgi?id=289240 rdar://146384866

Reviewed by Chris Dumez and Alan Baradlay.

* Source/WebCore/SaferCPPExpectations/UncountedLocalVarsCheckerExpectations:
* Source/WebCore/dom/DocumentFullscreen.cpp:
(WebCore::DocumentFullscreen::elementEnterFullscreen):
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::HTMLElement::showPopoverInternal):

Canonical link: https://commits.webkit.org/291701@main